# django-scribe-store

./: .gitignore  LICENSE  README.rst  mypy.ini  pyproject.toml  urls.py
scribe_store/: __init__.py  admin.py  apps.py  models.py
scribe_store/management/commands/: scribe.py  scribe_new.py
scribe_store/migrations/: 0001_initial.py  0002_alter_scribesource_target.py
tests/: settings.py
tests/sample/: admin.py  factories.py  models.py  tests.py
tests/sample/data/news/: 1update2create.csv  simple.csv  uniqueinvalid.csv
tests/sample/data/question/: emptylines.csv  nameheader.csv  simple.csv  spaces.csv
tests/sample/management/commands/: load_test_data.py
tests/sample/migrations/: 0001_initial.py
