[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-scribe-store"
authors = [{name = "Masaaki Yasui", email = "yasu@worgue.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "Django",
    "requests",
    "django-click",
]
requires-python = ">= 3.8"

[project.urls]
Home = "https://github.com/worgue/django-scribe-store"

[tool.flit.module]
name = "scribe_store"

[tool.rye]
dev-dependencies = [
    "responses~=0.23.1",
    "freezegun~=1.2.2",
]
